# cpprng-test

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  rng.cpp  rng.hpp  rng11.hpp  rngtest.cpp
